# notebooks

./: Humans+AI_presentation.ipynb  NBLC 2017-2018 Individual Player Stats.ipynb  Untitled.ipynb  package.json  poetry_lock_old  pyproject.toml  requirements.txt
.ipynb_checkpoints/: NBLC 2017-2018 Individual Player Stats-checkpoint.ipynb
notebooks/: Humans + AI.ipynb  Humans+AI_presentation.ipynb  german_credit_data_reason_codes.py
notebooks/HumanAI/: German_credit.csv  Humans + AI.ipynb  Humans + AI.slides.html
