[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["jordan-smith <jordan.smith@verafin.com>"]

[tool.poetry.dependencies]
python = ">=3.5.*"
jupyter_contrib_nbextensions = "^0.5.1"
jupyter = "^1.0"
shap = "^0.28.3"
aif360 = "^0.2.0"
ipykernel = "^5.1"
seaborn = "^0.9.0"
pyupset = "^0.1.1"
upsetplot = "^0.1.0"
protobuf = "^3.6"
xgboost = "^0.81.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
